changed to MIT license

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ description = Educational package for dimensional analysis
 url = https://github.com/saadgroup/BuckinghamPi
 author = Mokbel Karam
 author_email = mokbel.karam@chemeng.utah.edu
-license = GPL
+license = MIT
 long_description =
 platforms = Linux, Mac OS X, Windows
 classifiers =
